<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/notification_header">

        <com.indevelopment.sock.preference.MyEditTextPreference
            app:key="custom_detail"
            app:title="@string/custom_detail_title"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/customize_header">

        <com.indevelopment.sock.preference.MySwitchPreferenceCompat
            app:key="dark_mode"
            app:title="@string/dark_mode_title"
            app:summary="@string/dark_mode_summary"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="Premium">
        <com.indevelopment.sock.preference.MyPreference
            app:title="Unlock PREMIUM"
            app:summary="Buy this to unlock Premium features"
            app:key="unlock_premium" />
    </PreferenceCategory>

    <com.indevelopment.sock.preference.MyPreferenceCategory
        app:title="@string/about_header">
        <com.indevelopment.sock.preference.MyPreference
            app:title="@string/app_version"
            app:summary="@string/rate_this_app"
            app:key="rate_app" />
        <com.indevelopment.sock.preference.MyPreference
            app:title="@string/license"
            app:key="licenses"/>

    </com.indevelopment.sock.preference.MyPreferenceCategory>

</androidx.preference.PreferenceScreen>
